--- a/docs/docs/elements/dynamic-elements/basic-nav.mdx
+++ b/docs/docs/elements/dynamic-elements/basic-nav.mdx
@@ -14,6 +14,16 @@ The current implementation of the Basic Nav element is a temporary implementatio
 Make sure you're using at least Etch 0.33.1 and read the note above before you continue.
 :::
 
+<div class="video-embed">
+  <iframe
+    src="https://iframe.mediadelivery.net/embed/472639/2a6462b8-8d9d-4677-aa4c-7f225136b40a?autoplay=false&loop=false&muted=false&preload=true&responsive=true"
+    loading="lazy"
+    allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
+</div>
+
+
 This guide will walk you through adding a Basic, accessible Nav component to your site with full support for dropdown menus and flyout menus.
 
 The Nav component consists of four parts:
