fix: small typo on basic-nav docs

--- a/docs/docs/elements/dynamic-elements/basic-nav.mdx
+++ b/docs/docs/elements/dynamic-elements/basic-nav.mdx
@@ -188,7 +188,7 @@ Open the component styles and adjust those variables to match your design. For n
 
 Both components default to a 768px breakpoint. You can change this within the component CSS (media queries) so the Navigation and Burger stay in sync.
 :::tip
-you can search for `// Set the desired breakpoint` in the component CSS to find the breakpoint.
+you can search for `/* Set the desired breakpoint */` in the component CSS to find the breakpoint.
 :::
 
 ## Advanced Customization
