New Accordion component (#21)
* feat: Accordion Component documentation and source code

* fix: Basic nav and Accordion pages not being displayed on overview

* chore: modified path for the basic nav and burger json files

* feat: Version Badge component

* chore: reorganize path and styles for CopyToClipboard button

* fix: CopyToClipboard path in documentation

* fix: mdx files was not being recognized on the documents listings

--- a/docs/docs/elements/dynamic-elements/basic-nav.mdx
+++ b/docs/docs/elements/dynamic-elements/basic-nav.mdx
@@ -2,9 +2,9 @@
 title: Basic Nav
 ---
 
-import CopyToClipboard from '@site/src/components/CopyToClipboard';
-import NavJSON from './basic-nav-component.json';
-import BurgerJSON from './burger-component.json';
+import CopyToClipboard from '@site/src/components/CopyToClipboard/CopyToClipboard';
+import NavJSON from '../components-json/basic-nav-component.json';
+import BurgerJSON from '../components-json/burger-component.json';
 
 export const NAV_JSON = JSON.stringify(NavJSON, null, 2);
 export const BURGER_JSON = JSON.stringify(BurgerJSON, null, 2);
