add version badges to avoid confusion

--- a/docs/docs/elements/basic-elements/element.mdx
+++ b/docs/docs/elements/basic-elements/element.mdx
@@ -2,7 +2,11 @@
 title: Element
 ---
 
+import VersionBadge from '@site/src/components/VersionBadge/VersionBadge';
+
 # Element
+
+<VersionBadge version="1.0.0-alpha-3" />
 
 The **Element Element** in Etch is a special element that allows you to dynamically change the tag while keeping attributes, classes, and other settings intact.
 
