--- a/docs/docs/elements/basic-elements/element.mdx
+++ b/docs/docs/elements/basic-elements/element.mdx
@@ -12,7 +12,7 @@ The **Element Element** in Etch is a special element that allows you to dynamica
 
 To get started, add the Element Element to the page by clicking it in the **Elements Bar** while editing a Component.
 
-![Etch Element Element](../img/etch-svg-element.webp)
+![Etch Element Element](../img/etch-element-element.webp)
 
 :::info
 Although the button for adding the Element Element only appears while editing a Component, the Element itself is not exclusive to Components and can be placed anywhere in your structure. In most cases, however, you will use it within Components.
@@ -25,7 +25,7 @@ In the Attributes Panel, with the Element Element selected, you can choose a tag
 Alternatively, you can set the tag using the HTML editor by specifying the `tag` attribute, like so:  
 `<etch:element tag="div">`
 
-![Etch Element Element Attribute Panel](../img/etch-svg-attribute-panel.webp)
+![Etch Element Element Attribute Panel](../img/etch-element-attribute-panel.webp)
 
 
 ## Using the Element Element with Components
