Adds a small pill badge next to sidebar items
Docs set `sidebar_custom_props.badge` in frontmatter. Swizzled components append a `<span class="menu__link-badge">...</span>` to the sidebar label

--- a/docs/docs/elements/basic-elements/element.mdx
+++ b/docs/docs/elements/basic-elements/element.mdx
@@ -1,5 +1,7 @@
 ---
 title: Element
+sidebar_custom_props:
+  badge: "New"
 ---
 
 import VersionBadge from '@site/src/components/VersionBadge/VersionBadge';
