--- a/docs/docs/integrations/custom-fields/options-pages.mdx
+++ b/docs/docs/integrations/custom-fields/options-pages.mdx
@@ -24,8 +24,8 @@ Use the `options` key with the provider namespace that owns your options page fi
 {options.provider.field_name}
 ```
 
-- Available now: **Advanced Custom Fields (ACF)** via `options.acf.*`
-- Planned: **Meta Box** via `options.metabox.*`, **Etch Options** via `options.etch.*`
+- Available now: **Advanced Custom Fields (ACF)** via `options.acf.*`, **Meta Box** via `options.metabox.*`
+- Planned: **Etch Options** via `options.etch.*`
 
 Works globally (templates, pages, loops, headers/footers, etc.). No post context is required.
 
@@ -33,52 +33,50 @@ Works globally (templates, pages, loops, headers/footers, etc.). No post context
 
 ### Advanced Custom Fields (ACF)
 
-#### Accessing Option Values
+Use the `acf` namespace to access options page fields, e.g., `options.acf.field_name`.
+
+### Meta Box
+
+Use the `metabox` namespace to access options page fields, e.g., `options.metabox.field_id`.
+
+## Common Examples
+
+These examples work with any provider. Replace `provider` with `acf`, `metabox`, etc.
+
+### Basic Fields
 
 ```html
-{options.acf.business_email}
+<a class="contact__email" href="mailto:{options.provider.business_email}">{options.provider.business_email}</a>
+<a class="social-links__link" href="{options.provider.facebook_url}">Facebook</a>
 ```
 
-- Replace `business_email` with your ACF field name/key defined on the ACF Options Page.
+### Group Fields
 
-#### Common Examples
-
-##### Basic Fields
-```html
-<a href="mailto:{options.acf.business_email}">{options.acf.business_email}</a>
-<a href="{options.acf.facebook_url}">Facebook</a>
-```
-
-##### Group Fields
 ```html
 <div class="address">
-  <div>{options.acf.address.street}</div>
-  <div>{options.acf.address.city}, {options.acf.address.state} {options.acf.address.zip}</div>
+  <div class="address__street">{options.provider.address.street}</div>
+  <div class="address__line">{options.provider.address.city}, {options.provider.address.state} {options.provider.address.zip}</div>
 </div>
 ```
 
-##### Image Fields
+### Image Fields
+
 ```html
-<img src="{options.acf.logo.url}" alt="{options.acf.logo.alt}" />
+<img class="logo" src="{options.provider.logo.url}" alt="{options.provider.logo.alt}" />
 ```
 
-##### Repeater Fields
+### Repeater Fields
+
 ```html
 <ul class="hours">
-  {#loop options.acf.hours as hour}
-    <li>
-      <span class="day">{hour.day}</span>
-      <span class="time">{hour.open}–{hour.close}</span>
+  {#loop options.provider.hours as hour}
+    <li class="hours__item">
+      <span class="hours__day">{hour.day}</span>
+      <span class="hours__time">{hour.open}–{hour.close}</span>
     </li>
   {/loop}
 </ul>
 ```
-
-#### Notes
-
-- Ensure an ACF Options Page exists and fields are assigned to it.
-- Access patterns mirror post-level custom fields. The only difference is the top-level `options` scope.
-- For arrays and complex structures, use standard loops and dot notation.
 
 ## Troubleshooting
 
@@ -86,3 +84,6 @@ If `{options._._}` outputs nothing:
   - Confirm the field exists on an Options Page (not a post).
   - Verify the field name/key matches exactly.
   - Check that the field has a saved value.
+  - Ensure an Options Page exists in your chosen provider and fields are assigned to it.
+  - Access patterns mirror post-level custom fields. The only difference is the top-level `options` scope.
+  - For arrays and complex structures, use standard loops and dot notation.
