--- a/docs/docs/integrations/custom-fields/options-pages.mdx
+++ b/docs/docs/integrations/custom-fields/options-pages.mdx
@@ -74,9 +74,53 @@ Works globally (templates, pages, loops, headers/footers, etc.). No post context
 </ul>
 ```
 
-#### Notes
+### Meta Box
 
-- Ensure an ACF Options Page exists and fields are assigned to it.
+#### Accessing Option Values
+
+```html
+{options.metabox.option_page_name.field_name}
+```
+
+- Replace `option_page_name` with your Settings Page ID or Option name defined on the Meta Box Settings Page.
+- Replace `field_name` with your Meta Box field name/key defined on the Meta Box Custom Fields page.
+
+#### Common Examples
+
+##### Basic Fields
+```html
+<a href="mailto:{options.metabox.company.business_email}">{options.metabox.company.business_email}</a>
+<a href="{options.metabox.company.facebook_url}">Facebook</a>
+```
+
+##### Group Fields
+```html
+<div class="address">
+  <div>{options.metabox.company.address.street}</div>
+  <div>{options.metabox.company.address.city}, {options.metabox.company.address.state} {options.metabox.company.address.zip}</div>
+</div>
+```
+
+##### Image Fields
+```html
+<img src="{options.metabox.company.logo.url}" alt="{options.metabox.company.logo.alt}" />
+```
+
+##### Repeater Fields
+```html
+<ul class="hours">
+  {#loop options.metabox.company.hours as hour}
+    <li>
+      <span class="day">{hour.day}</span>
+      <span class="time">{hour.open}–{hour.close}</span>
+    </li>
+  {/loop}
+</ul>
+```
+
+### Notes
+
+- Ensure an Option Page exists and fields are assigned to it.
 - Access patterns mirror post-level custom fields. The only difference is the top-level `options` scope.
 - For arrays and complex structures, use standard loops and dot notation.
 
